# Copyright (C) 2009 Lehigh University and others.
# All Rights Reserved.
# This file is distributed under the Eclipse Public License

## $Id: Makefile.am 507 2006-06-03 03:20:16Z andreasw $

# Author:  Ted Ralphs           Lehigh    2009-10-18

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for DIP                                #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = \
	MILP_DecompApp.cpp MILP_DecompApp.h \
	MILP_Main.cpp MILP_Param.h

# List libraries that need to be linked in
unitTest_LDADD = ../src/libDecomp.la $(DIPLIB_LIBS)
unitTest_DEPENDENCIES = ../src/libDecomp.la $(DIPLIB_DEPENDENCIES)
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src` $(DIPLIB_CFLAGS)

# This line is necessary to allow VPATH compilation
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(top_srcdir)/src` \
                   -I`$(CYGPATH_W) $(top_builddir)/src`

########################################################################
#                     Includes for LP Solver                           #
########################################################################

if CPLEX_LP_SOLVER
AM_CPPFLAGS += -D__DECOMP_LP_CPX__
endif

if CLP_LP_SOLVER
  AM_CPPFLAGS += -D__DECOMP_LP_CLP__
endif

########################################################################
#                     Includes for IP Solver                           #
########################################################################

if CBC_IP_SOLVER
if COIN_HAS_CBC
AM_CPPFLAGS += -D__DECOMP_IP_CBC__
endif
endif

if CPLEX_IP_SOLVER
AM_CPPFLAGS += -D__DECOMP_IP_CPX__
endif

test: unitTest$(EXEEXT)

	./unitTest$(EXEEXT) --doPriceCut 1 --doCut 0 --MILP:DataDir `$(CYGPATH_W) $(SAMPLE_DATA)` --MILP:Instance tp3 --MILP:BestKnownLB 155 --MILP:BestKnownUB 155

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

#DISTCLEANFILES = flugpl.log flugpl.mps
